Add role to potential users index page Add user's role to table in view and partial

--- a/app/views/potential_users/_potential_user.html.erb
+++ b/app/views/potential_users/_potential_user.html.erb
@@ -5,5 +5,6 @@
   <td><%= potential_user.surname %></td>
   <td><%= potential_user.email %></td>
   <td><%= potential_user.county %></td>
+  <td><%= potential_user.role %></td>
   <td><%= potential_user.tasks.join(", ") %></td>
 </tr>
