--- a/app/views/potential_users/index.html.erb
+++ b/app/views/potential_users/index.html.erb
@@ -12,6 +12,7 @@
       <th>Surname</th>
       <th>Email</th>
       <th>County</th>
+      <th>Role</th>
       <th>Tasks</th>
     </tr>
     <%= render @potential_users %>
