Add purchased images to page

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -7,7 +7,7 @@
   align-items: center;
   background-color: black;
   overflow: hidden;
-  background-image: linear-gradient(rgba(19, 47, 34, .4), rgba(19, 47, 34, .4)), url('field_4.jpg');
+  background-image: linear-gradient(rgba(19, 47, 34, .4), rgba(19, 47, 34, .4)), url('background_field_cropped_compressed.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
