--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -95,7 +95,7 @@
   </div>
 
   <div class="farm-images">
-    <%= image_tag "silage_1.jpg" %>
+    <%= image_tag "harvester.jpg" %>
   </div>
 
   <section class="benefits-of-joining why-and-how" id="benefits-of-joining">
@@ -206,7 +206,7 @@
   </section>
 
   <div class="farm-images">
-    <%= image_tag "silage_2.jpg" %>
+    <%= image_tag "tractor.jpg" %>
   </div>
 
   <section class="how-it-works why-and-how">
